htdocs/css/openwebrx.css
/* ... */
#openwebrx-bookmarks-container
{
    height: 25px;
    position: relative;
    z-index: 1000;
}

#openwebrx-bookmarks-container .bookmark {
    font-size: 12px;
    background-color: #FFFF00;
    border: 1px solid #000;
    border-radius: 5px;
    padding: 2px 5px;
    cursor: pointer;
    white-space: nowrap;
    max-height: 14px;
    max-width: 50px;

    position: absolute;
    bottom: 5px;
    transform: translate(-50%, 0);
}

#openwebrx-bookmarks-container .bookmark .bookmark-content {
    overflow: hidden;
    text-overflow: ellipsis;
}

#openwebrx-bookmarks-container .bookmark .bookmark-actions {
    display: none;
    text-align: right;
}

.bookmark-actions .action {
    line-height: 0;
}

.bookmark-actions .action img {
    width: 14px;
}

#openwebrx-bookmarks-container .bookmark.selected {
    z-index: 1010;
}

#openwebrx-bookmarks-container .bookmark:hover {
    z-index: 1011;
    max-height: none;
    max-width: none;
}

#openwebrx-bookmarks-container .bookmark[editable]:hover .bookmark-actions {
    display: block;
    margin-bottom: 5px;
}

#openwebrx-bookmarks-container .bookmark:after {
	content: '';
	position: absolute;
	bottom: 0;
	left: 50%;
	width: 0;
	height: 0;
	border: 5px solid transparent;
	border-top-color: #FFFF00;
	border-bottom: 0;
	margin-left: -5px;
	margin-bottom: -5px;
}

#openwebrx-bookmarks-container .bookmark[data-source=local] {
    background-color: #0FF;
}

#openwebrx-bookmarks-container .bookmark[data-source=local]:after {
    border-top-color: #0FF;
}

#openwebrx-bookmarks-container .bookmark[data-source=dial_frequencies] {
    background-color: #0F0;
}

#openwebrx-bookmarks-container .bookmark[data-source=dial_frequencies]:after {
    border-top-color: #0F0;
}

#webrx-canvas-background {
    flex-grow: 1;
	background-image: url('../gfx/openwebrx-background-cool-blue.png');
	background-repeat: no-repeat;
	background-color: #1e5f7f;
	background-size: cover;
	display: flex;
	flex-direction: column;
}

@supports(background-image: -webkit-image-set(url('../gfx/openwebrx-background-cool-blue.webp') 1x)) {
    #webrx-canvas-background {
        background-image: -webkit-image-set(url('../gfx/openwebrx-background-cool-blue.webp') 1x);
    }
}

@supports(background-image: image-set(url('../gfx/openwebrx-background-cool-blue.webp') 1x)) {
    #webrx-canvas-background {
        background-image: image-set(url('../gfx/openwebrx-background-cool-blue.webp') 1x);
    }
}

#webrx-canvas-container
{
	position: relative;
	overflow: visible;
	cursor: crosshair;
	flex-grow: 1;
}

#webrx-canvas-container canvas
{
	position: absolute;
	top: 0;
	border-style: none;
	image-rendering: crisp-edges;
	image-rendering: -webkit-optimize-contrast;
	width: 100%;
	height: 201px;
	will-change: transform;
}

#openwebrx-log-scroll
{
    /*overflow-y:auto;*/
    height: 155px;
    max-width: 619px;
    width: 100%;
}

#openwebrx-messages .chatname {
    color: #bbb;
    font-weight: bold;
}

#openwebrx-messages .chatmessage {
}

#openwebrx-chat-inputs {
  margin-top: 5px;
  height: 1.5rem;
  width: 99%;
}

#openwebrx-log-scroll .nano-content, #openwebrx-log-scroll .nano-pane {
  height: 100%;
}

.nano .nano-pane   { background: #444; }
.nano .nano-slider { background: #eee !important;  }

.webrx-error
{
	font-weight: bold;
	color: #ff6262;
}

@font-face {
    font-family: 'roboto-mono';
    src: url('../fonts/RobotoMono-Regular.woff2') format('woff2'),
         url('../fonts/RobotoMono-Regular.woff') format('woff'),
         url('../fonts/RobotoMono-Regular.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

.webrx-actual-freq {
	width: 100%;
	text-align: left;
	padding: 0;
	margin: 0;
	display: flex;
	flex-direction: row;
	cursor: pointer;
}

.webrx-actual-freq > * {
    flex: 1;
}

.webrx-actual-freq .input-group {
    display: flex;
    flex-direction: row;
}

.webrx-actual-freq .input-group > * {
    flex: 0 0 auto;
}

.webrx-actual-freq .input-group input {
    flex: 1 0 auto;
    margin-right: 0;
    border-right: 1px solid #373737;
    -moz-appearance: textfield;
}

.webrx-actual-freq .input-group input::-webkit-outer-spin-button,
.webrx-actual-freq .input-group input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

.input-group > :not(:last-child) {
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
}

.input-group > :not(:first-child) {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
}

.input-group :first-child {
    padding-left: 5px;
}

.input-group :last-child {
    padding-right: 5px
}

.webrx-actual-freq .input-group input, .webrx-actual-freq .input-group select {
    outline: none;
    font-size: 16pt;
}

.webrx-actual-freq input {
    font-family: 'roboto-mono';
    width: 0;
    box-sizing: border-box;
    border: 0;
    padding: 0;
    background-color: inherit;
    color: inherit;
}

.webrx-actual-freq, .webrx-actual-freq input {
	font-size: 16pt;
	font-family: 'roboto-mono';
}

.webrx-actual-freq .digit {
    cursor: ns-resize;
}

.webrx-actual-freq .digit:hover {
	color: #FFFF50;
	border-radius: 5px;
	background: -webkit-gradient( linear, left top, left bottom, color-stop(0.0 , #373737), color-stop(1, #4F4F4F) );
	background: -moz-linear-gradient( center top, #373737 0%, #4F4F4F 100% );
}

.webrx-mouse-freq {
	width: 100%;
	text-align: left;
	font-size: 10pt;
	color: #AAA;
	font-family: 'roboto-mono';
	margin-bottom: 5px;
}

#openwebrx-panels-container-left,
#openwebrx-panels-container-right {
    position: absolute;
    bottom: 0;
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    height: 0;
    overflow: visible;
}

#openwebrx-panels-container-left {
    left: 0;
    align-items: flex-start;
    width: 100%;
}

#openwebrx-panels-container-right {
    right: 0;
    align-items: flex-end;
}
/* ... */

